# fuel-telemetry

./: Cargo.toml  LICENSE  README.md  compose.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
.github/workflows/scripts/: verify_tag.sh
docs/: architecture.md
examples/: attributes.rs  complex.rs  simple.rs  spans.rs  stdout.rs  verbose.rs
fuel-telemetry/: Cargo.toml
fuel-telemetry-macros/: Cargo.toml
fuel-telemetry-macros/src/: lib.rs
fuel-telemetry/src/: file_watcher.rs  lib.rs  systeminfo_watcher.rs  telemetry_layer.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: errors.rs  file_watcher.rs  lib.rs  process_watcher.rs  systeminfo_watcher.rs  telemetry_formatter.rs  telemetry_layer.rs
