[package]
name = "fuel-telemetry"
version = "0.1.0"
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuel-telemetry"
description = "A tracing library to implement Fuel telemetry"

[lib]
name = "fuel_telemetry"
path = "src/lib.rs"

[workspace]
members = ["macros"]
default-members = [".", "macros"]

[dependencies]
macros = { path = "./macros" }

base64 = "0.22"
chrono = "0.4"
dirs = "6.0"
influxdb-line-protocol = "2.0"
nix = {version = "0.29", features = ["feature", "fs", "process", "resource","signal", "time"]}
regex = "1.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "default-tls"] }
sysinfo = "0.33"
thiserror = "2.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.15", features = ["v4"] }