[package]
name = "fuel-telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "A tracing library to implement Fuel telemetry"

[lib]
name = "fuel_telemetry"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
chrono = "0.4"
dirs = "6.0"
fuel-telemetry-macros = { path = "../fuel-telemetry-macros", version = "0.1.1" }
influxdb-line-protocol = "2.0"
libc = "0.2"
nix = {version = "0.29", features = ["feature", "fs", "process", "resource","signal", "time"]}
regex = "1.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "default-tls"] }
sysinfo = "0.33"
thiserror = "2.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.15", features = ["v4"] }

[dev-dependencies]
rusty-fork = "0.3"
tempfile = "3.18"
